@@ -31,6 +31,10 @@ Arch_switchToThread(tcb_t* tcb)
     if (config_set(CONFIG_KERNEL_X86_IBPB_ON_CONTEXT_SWITCH)) {
         x86_ibpb();
     }
+
+    if (config_set(CONFIG_KERNEL_X86_RSB_ON_CONTEXT_SWITCH)) {
+        x86_flush_rsb();
+    }
 }
 
 BOOT_CODE void
